--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "zod": "^3.23.8"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/jazdevv"
+    "@jazdevv:registry": "https://npm.pkg.github.com/jazdevv"
   }
 }
