--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jazdevv/zod-validator",
+  "name": "zod-validator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -24,8 +24,5 @@
   "homepage": "https://github.com/jazdevv/zodValidator#readme",
   "dependencies": {
     "zod": "^3.23.8"
-  },
-  "publishConfig": {
-    "@jazdevv:registry": "https://npm.pkg.github.com/jazdevv"
   }
 }
