--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/jazdevv/zodValidator#readme",
   "dependencies": {
     "zod": "^3.23.8"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }  
 }
