update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zod-validator",
+  "name": "@jazdevv/zod-validator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
