--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jazdevv/zod-validator",
+  "name": "zod-validator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jazdevv/zodValidator"
+    "url": "https://github.com/jazdevv/zodValidator.git"
   },
   "keywords": [
     "zod",
